--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
 html {
   font-family: Lora, serif;
+  color: #fff;
+
 }
 
 .masthead {
+  background-image: url("../images/www/leaf-bg.svg");
+  border: 3px solid #2d5a4d;
+  background-color: #588477;
 
 }
 
@@ -16,9 +21,14 @@ html {
 
 .nav a {
   text-decoration: none;
+  color: #fff;
+  background-color: #467366;
+  border-radius: 8px;
+  border: 3px solid #2d5a4d;
 }
 
 .nav a:hover {
+  color:#2d5a4d;
 
 }
 
