--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,10 @@ html {
 }
 
 .banner {
-  background-image: linear-gradient() rgba(16, 52, 41, 0) 40%, rgb(16, 52, 41, .8), url("../images/banner.jpg");
-  background-size: cover;
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
+  background-size: 100% 50%, cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: left bottom, center bottom;
 }
 
 .banner-content {
